# servant-openapi-hs

./: .gitignore  CHANGELOG.md  README.md  cabal.project  flake.nix  servant-openapi-hs.cabal  servant-openapi.cabal
.seihou/: config.dhall  manifest.json
agents/skills/release/: SKILL.md
app/: GenOpenApi.hs
docs/plans/: 1-port-servant-openapi-hs-to-openapi-hs-openapi-3-1.md  1-port-servant-openapi-to-openapi-hs-openapi-3-1.md
nix/: haskell.nix
src/Servant/: OpenApi.hs
src/Servant/OpenApi/: Internal.hs  Test.hs  TypeLevel.hs
src/Servant/OpenApi/Internal/: Orphans.hs  Test.hs  TypeLevel.hs
src/Servant/OpenApi/Internal/TypeLevel/: API.hs  Every.hs  TMap.hs
test/Servant/: OpenApiSpec.hs
