cabal-version:       3.0
name:                servant-openapi
version:             4.0.0
synopsis:            Generate an OpenAPI 3.1 specification for your servant API.
description:
  [OpenAPI](https://spec.openapis.org/oas/v3.1.0) is a language-agnostic format
  for describing and documenting HTTP APIs in JSON or YAML. This library
  generates an OpenAPI 3.1 specification from a Servant API and can partially
  test whether an API conforms with its specification.
  .
  A generated specification can be used for many things, such as
  .
  * displaying interactive documentation using [Swagger UI](http://swagger.io/swagger-ui/);
  .
  * generating clients and servers in many languages using [OpenAPI Generator](https://openapi-generator.tech/);
  .
  * and [many others](http://swagger.io/open-source-integrations/).
  .
  This package is a fork of
  [@servant-openapi3@](https://github.com/biocad/servant-openapi3) that targets
  OpenAPI 3.1 via [@openapi-hs@](https://github.com/shinzui/openapi-hs).
homepage:            https://github.com/shinzui/servant-openapi
bug-reports:         https://github.com/shinzui/servant-openapi/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              David Johnson, Nickolay Kudasov, Maxim Koltsov
maintainer:          nadeem@gmail.com
copyright:           (c) 2015-2020, Servant contributors
category:            Web, Servant, OpenApi
build-type:          Simple
tested-with:
  GHC ==9.12.4 || ==9.14.1

extra-source-files:
    README.md
  , CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/shinzui/servant-openapi.git

library
  ghc-options:         -Wall
  exposed-modules:
    Servant.OpenApi
    Servant.OpenApi.Test
    Servant.OpenApi.TypeLevel

    -- Internal modules
    Servant.OpenApi.Internal
    Servant.OpenApi.Internal.Orphans
    Servant.OpenApi.Internal.Test
    Servant.OpenApi.Internal.TypeLevel
    Servant.OpenApi.Internal.TypeLevel.API
    Servant.OpenApi.Internal.TypeLevel.Every
    Servant.OpenApi.Internal.TypeLevel.TMap
  hs-source-dirs:      src
  build-depends:       aeson                     >=2.0.1.0  && <2.3
                     , aeson-pretty              >=0.8.7    && <0.9
                     , base                      >=4.21     && <4.23
                     , base-compat               >=0.10.5   && <0.15
                     , bytestring                >=0.10.8.1 && <0.13
                     , http-media                >=0.7.1.3  && <0.9
                     , insert-ordered-containers >=0.2.1.0  && <0.3
                     , lens                      >=4.17     && <5.4
                     , servant                   >=0.17     && <0.21
                     , singleton-bool            >=0.1.4    && <0.2
                     , openapi-hs                >=4.0      && <5
                     , text                      >=1.2.3.0  && <3
                     , unordered-containers      >=0.2.9.0  && <0.3

                     , hspec
                     , QuickCheck
  default-language:    GHC2024

executable gen-openapi
  ghc-options:      -Wall
  hs-source-dirs:   app
  main-is:          GenOpenApi.hs
  build-depends:    base
                  , aeson
                  , bytestring
                  , lens
                  , openapi-hs
                  , servant
                  , servant-openapi
                  , text
  default-language: GHC2024

test-suite spec
  ghc-options:      -Wall
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  build-tool-depends: hspec-discover:hspec-discover >=2.6.0 && <2.12
  build-depends:    base
                  , base-compat
                  , aeson
                  , hspec >=2.6.0 && <2.12
                  , QuickCheck
                  , lens
                  , lens-aeson >=1.0.2    && <1.3
                  , servant
                  , servant-openapi
                  , openapi-hs >= 4.0
                  , text
                  , template-haskell
                  , utf8-string >=1.0.1.1 && <1.1
                  , time
                  , vector
  other-modules:
    Servant.OpenApiSpec
  default-language: GHC2024
